<resources>
    <string name="app_name">Musical Structure</string>
    <string name="categories"><u>Category</u></string>
    <string name="artist_name">Artist Name</string>
    <string name="song_name">Song Name</string>
    <string name="library_button">library button</string>
    <string name="music_pic">music pic</string>
    <string name="pause_button">pause button</string>
    <string name="play_button">play button</string>
    <string name="stop_button">stop button</string>
    <string name="classic_singer1">Mozart</string>
    <string name="classic_song1">The Magical Flute</string>
    <string name="classic_singer2">Franz Liszt</string>
    <string name="classic_song2">Liebestraum</string>
    <string name="classic_singer3">Omar Khairat</string>
    <string name="classic_song3">Don\'t lose your mind</string>
    <string name="classic_singer4">Mozart</string>
    <string name="classic_song4">Queen of Night</string>
    <string name="classic_singer5">Claude Debussy</string>
    <string name="classic_song5">Clair De Lune</string>
    <string name="classic_singer6">Anthony Way</string>
    <string name="classic_song6">Cradle Song</string>
    <string name="classic_singer7">Mozart</string>
    <string name="classic_song7">Divertimento</string>
    <string name="classic_singer8">Francisco Tarrega</string>
    <string name="classic_song8">Gran Vals</string>
    <string name="classic_singer9">Beethoven</string>
    <string name="classic_song9">Minute in G</string>
    <string name="classic_singer10">Omar Khairat</string>
    <string name="classic_song10">The Second meeting</string>
    <string name="reggae_singer1">Bob Marley</string>
    <string name="reggae_song1">One Love</string>
    <string name="reggae_singer2">Jimmy Cliff</string>
    <string name="reggae_song2">The harder they come</string>
    <string name="reggae_singer3">Bob Marley</string>
    <string name="reggae_song3">No woman no cry</string>
    <string name="reggae_singer4">Eric Donaldson</string>
    <string name="reggae_song4">Cherry Oh Baby</string>
    <string name="reggae_singer5"><![CDATA[Mohamed Mounir & The wailers]]></string>
    <string name="reggae_song5">Eleila Ya samra</string>
    <string name="reggae_singer6">U-Roy</string>
    <string name="reggae_song6">The Tide is High</string>
    <string name="reggae_singer7">Stephen Marley</string>
    <string name="reggae_song7">Rock Stone</string>
    <string name="reggae_singer8">The slickers</string>
    <string name="reggae_song8">Johny too Bad</string>
    <string name="reggae_singer9">Busy Signal</string>
    <string name="reggae_song9">Reggae music again</string>
    <string name="reggae_singer10">Eric clapton</string>
    <string name="reggae_song10">I shot the sheriff</string>
    <string name="hip_hop_singer1">50 Cent</string>
    <string name="hip_hop_song1">In Da Club</string>
    <string name="hip_hop_singer2">Kanye West</string>
    <string name="hip_hop_song2">Famous</string>
    <string name="hip_hop_singer3">Eminem</string>
    <string name="hip_hop_song3">Lose yourself</string>
    <string name="hip_hop_singer4">G-Eazy</string>
    <string name="hip_hop_song4">No Limit</string>
    <string name="hip_hop_singer5">Snoop Dogg</string>
    <string name="hip_hop_song5">Gin and Juice</string>
    <string name="hip_hop_singer6">Eminem</string>
    <string name="hip_hop_song6">Stan</string>
    <string name="hip_hop_singer7">Drake</string>
    <string name="hip_hop_song7">God\'s plan</string>
    <string name="hip_hop_singer8">Dr.Dre</string>
    <string name="hip_hop_song8">Still D.R.E</string>
    <string name="hip_hop_singer9">Eminem</string>
    <string name="hip_hop_dong9">My Name is</string>
    <string name="hip_hop_singer10">Kanye West</string>
    <string name="hip_hop_song10">Gold Digger</string>
    <string name="jazz_singer1">Louis Armstrong</string>
    <string name="jazz_song1">What a wonderful world</string>
    <string name="jazz_singer2">Dave Brubeck</string>
    <string name="jazz_song2">Take Five</string>
    <string name="jazz_singer3">Eva Cassidy</string>
    <string name="jazz_song3">Autumn Leaves</string>
    <string name="jazz_singer4">Miles Davis</string>
    <string name="jazz_song4">So What</string>
    <string name="jazz_singer5">Billie Holiday</string>
    <string name="jazz_song5">Strange Fruit</string>
    <string name="jazz_singer6">Horace Silver</string>
    <string name="jazz_song6">Song for my Father</string>
    <string name="jazz_singer7">Louis Armstrong</string>
    <string name="jazz_song7">Ain\'t Misbehavin</string>
    <string name="jazz_singer8">Thelonious Monk</string>
    <string name="jazz_song8">Round Midnight</string>
    <string name="jazz_singer9">Ella Fitzgerald</string>
    <string name="jazz_song9">My Funny Valentine</string>
    <string name="jazz_singer10">Frank sinatra</string>
    <string name="jazz_song10">Fly me to the moon</string>
    <string name="play">Playing Music</string>
    <string name="pause">Pausing Music</string>
    <string name="stop">Stopping Music</string>
</resources>
